name:           mfa-example
version:        0.1.0.0
synopsis:       Example TOTP MFA token generator
description:    Please see the README on Github at <https://github.com/cb372/mfa-example#readme>
homepage:       https://github.com/cb372/mfa-example#readme
bug-reports:    https://github.com/cb372/mfa-example/issues
author:         Chris Birchall
maintainer:     chris.birchall@gmail.com
copyright:      2017 Chris Birchall
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/cb372/mfa-example

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
    , time
    , Crypto
    , base32string
    , bytestring
    , hexstring
  exposed-modules:
      MFA
    , MFA.Util
  other-modules:
      Paths_mfa_example
  default-language: Haskell2010

executable mfa-example-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , mfa-example
  other-modules:
      Paths_mfa_example
  default-language: Haskell2010
